[tool.poetry]
name = "moonraker"
version = "0.1.0"
description = ""
authors = ["Your Name <ian@telem.us>"]

description = "An CLI helper for Terraform"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/iancharles/moonraker"
repository = "https://github.com/iancharles/moonraker"
keywords = ["terraform"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
